fix: rename medicine services and requests